refactor auth response (#2)
